[package]
name = "naughty_syscall_auditor"
version = "0.1.0"
edition = "2021"
description = "He's not the messiah, he's a very naughty syscall auditor"

# build = "build.rs"

# build = "build.rs"

[lib]
name = "nsa"
crate-type = ["cdylib"]

[dependencies]
bindgen = "0.69.4"
libc = "0.2.153"

[dev-dependencies]
bindgen = "0.69.4"

[build-dependencies]
bindgen = "0.69"